fix: fix spacing between list items

--- a/src/elements/skiplink-list/skiplink-list.scss
+++ b/src/elements/skiplink-list/skiplink-list.scss
@@ -23,6 +23,7 @@
 .sbb-skiplink-list {
   @include sbb.list-reset;
 
+  display: block;
   height: var(--sbb-skiplink-list-wrapper-size);
   width: var(--sbb-skiplink-list-wrapper-size);
 
@@ -33,7 +34,7 @@
   & > :is(li, span) {
     @include sbb.shadow-level-5-hard;
 
-    display: inline-block;
+    display: list-item;
     height: var(--sbb-skiplink-list-height);
     overflow: var(--sbb-skiplink-list-overflow);
     border-radius: var(--sbb-border-radius-4x);
